// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popper API test getTriggerElement is useful 1`] = `
<div>
  <button>
    test
  </button>
  <Popper
    defaultVisible={true}
    getPopupContainer={[Function]}
    getTriggerElement={[Function]}
    tip="tips text"
  >
    <span
      className="kd-popper-reference kd-test-trigger"
    >
      text
    </span>
    <Portal
      containerInfo={
        <div>
          <button>
            test
          </button>
          <span
            class="kd-popper-reference kd-test-trigger"
          >
            text
          </span>
          <div
            class="kd-popper hidden"
          >
            <div
              class="kd-popper-top kd-popper-top-out"
            >
              tips text
            </div>
          </div>
        </div>
      }
    >
      <div
        className="kd-popper"
        style={Object {}}
      >
        <div
          className="kd-popper-top kd-popper-top-in"
          onAnimationEnd={[Function]}
          onTransitionEnd={[Function]}
          style={Object {}}
        >
          tips text
        </div>
      </div>
    </Portal>
  </Popper>
</div>
`;

exports[`Popper render Test 1`] = `
<Popper
  tip={
    <span>
      text
    </span>
  }
>
  <span
    className="kd-popper-reference"
  >
    text
  </span>
</Popper>
`;

exports[`Popper render null or undefined without errors 1`] = `
<Popper>
  <span
    className="kd-popper-reference"
  />
</Popper>
`;

exports[`Popper special case 测试ref返回值不为dom元素 1`] = `
<Popper
  tip="tips text"
>
  <Input
    borderType="bordered"
    className="kd-popper-reference"
    prefix="KDesign"
    suffix="Kdesign"
  >
    <ClearableInput
      borderType="bordered"
      className="kd-popper-reference"
      direction="ltr"
      element={
        <input
          className="kd-input kd-input-size-middle"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          type="text"
          value=""
        />
      }
      focused={false}
      handleReset={[Function]}
      inputCount={null}
      inputType="input"
      prefix="KDesign"
      prefixCls="kd-input"
      size="middle"
      suffix="Kdesign"
      type="text"
      value=""
    >
      <span
        className="kd-input-wrapper kd-input-wrapper-size-middle kd-popper-reference"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          className="kd-input-prefix"
          onMouseDown={[Function]}
        >
          KDesign
        </span>
        <input
          className="kd-input kd-input-size-middle"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          style={null}
          type="text"
          value=""
        />
        <span
          className="kd-input-suffix"
          onMouseDown={[Function]}
        >
          Kdesign
        </span>
      </span>
    </ClearableInput>
  </Input>
</Popper>
`;
